--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,14 @@
 asgiref==3.8.1
+click==8.2.1
+colorama==0.4.6
+dj-database-url==2.3.0
 Django==5.1.6
+gunicorn==23.0.0
+h11==0.16.0
+packaging==25.0
 pillow==11.1.0
 sqlparse==0.5.3
+typing_extensions==4.13.2
 tzdata==2025.1
+uvicorn==0.34.2
+whitenoise==6.9.0
