--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ gunicorn==23.0.0
 h11==0.16.0
 packaging==25.0
 pillow==11.1.0
+psycopg==3.2.9
 sqlparse==0.5.3
 typing_extensions==4.13.2
 tzdata==2025.1
